# pokerRebel

./: .gitignore  CHECKPOINT_SAVING.md  CHECK_MEMORY.md  FIX_PARTITION_LIMIT.md  Makefile  PARAMETER_GUIDE.md  QUICK_FIX_SAVE_EARLY_EPOCHS.md  README.md  README_EXTRACT_EPOCH.md  SPEED_VS_QUALITY.md  extract_epoch.py  extract_epoch.sh  extract_epoch_remote.sh  run_cpu_batch.sh  run_cpu_batch_balanced.sh  run_cpu_batch_conservative.sh  run_cpu_batch_minimal.sh  run_cpu_batch_strong.sh
batch/: run_cpu_batch_balanced.sh  run_cpu_batch_conservative.sh  run_cpu_batch_fast.sh  run_cpu_batch_minimal.sh
cfvpy/: models.py  selfplay.py
conf/c02_selfplay/: poker.yaml
conf/common/launcher/: slurm_mit.yaml
csrc/poker/: CMakeLists.txt  gen_benchmark.cc  poker.cc  poker.h  poker_test.cc  real_net.cc  real_net.h  recursive_eval.cc  recursive_solving.cc  recursive_solving.h  recursive_solving_test.cc  stats.cc  stats.h  subgame_solving.cc  subgame_solving.h  subgame_solving_test.cc  tree.h  tree_test.cc  util.h
csrc/poker/rela/: data_loop.h  pybind.cc  types.cc
docs/: CHECKING_RESULTS.md  CONFIG_FIELD_MAPPING.md  FINAL_CHECKLIST.md  FIND_LOGS.md  QUICK_START_POKER.md  SLURM_CHECKLIST.md  SLURM_SETUP.md  TEST_DOCUMENTATION.md  TRAINING_AND_EVALUATION.md  VERIFICATION_SUMMARY.md
scripts/: README_training_results.md  find_logs.sh  verify_log_format.py
